--- a/code/app/globals.css
+++ b/code/app/globals.css
@@ -5,3 +5,22 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  padding-top: 30px;
+  padding-bottom: 170px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
